<resources>
    <string name="app_name">ReleL</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Number</string>
    <string name="contact_address">Address</string>
    <string name="contact_email">Email</string>
    <string name="id">Id</string>
    <string name="photo_hd">Photo Hd</string>
    <string name="call_contact">Call this contact</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="number">Number of Contact Saved</string>
</resources>
