<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyActicity"
    android:id="@+id/mod_layout">
    <ImageView
        android:id="@+id/big_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/photo_hd" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="50dp"
        app:layout_constraintTop_toBottomOf="@+id/big_image"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="?attr/actionBarSize"
            android:verticalScrollbarPosition="defaultPosition"
            app:srcCompat="@drawable/ic_check" />

        <EditText
            android:id="@+id/mod_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:autofillHints="@string/first_name" />

        <EditText
            android:id="@+id/mod_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:autofillHints="@string/last_name" />


        <EditText
            android:id="@+id/mod_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:autofillHints="@string/phone_number" />

        <EditText
            android:id="@+id/mod_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/contact_email" />

        <EditText
            android:id="@+id/mod_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contact_address"
            android:inputType="textPersonName"
            android:autofillHints="@string/contact_address" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>