<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/big_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/photo_hd" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_image">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_check" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/first_name"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/last_name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/code_picker"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                app:defaultNameCode="HTI" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/phone_number"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="8" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/contact_email"
            android:ems="10"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteY="236dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/contact_address"
            android:ems="10"
            android:hint="@string/contact_address"
            android:inputType="textPersonName" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>