<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Item">

    <ImageView
        android:id="@+id/big_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/photo_hd" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/big_image">

        <TextView
            android:id="@+id/item_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/first_name"
            app:layout_constraintBottom_toTopOf="@+id/item_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/call_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="100dp"
            android:clickable="true"
            android:contentDescription="@string/call_contact"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/item_number"
            app:layout_constraintStart_toEndOf="@+id/item_number"
            app:layout_constraintTop_toTopOf="@+id/item_number"
            app:srcCompat="@drawable/ic_call_item" />

        <TextView
            android:id="@+id/item_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/last_name"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/item_first_name"
            app:layout_constraintTop_toTopOf="@+id/item_first_name" />

        <TextView
            android:id="@+id/item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="call"
            android:text="@string/phone_number"
            app:layout_constraintBottom_toTopOf="@+id/item_address"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginBottom="24dp"
            android:text="@string/contact_address"
            app:layout_constraintBottom_toTopOf="@+id/item_email"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/contact_email"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_address"
            app:layout_constraintEnd_toEndOf="@+id/call_item"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/item_address"
            app:layout_constraintTop_toTopOf="@+id/item_address"
            app:layout_constraintVertical_bias="0.172"
            app:srcCompat="@drawable/ic_location"
            android:contentDescription="@string/location" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_email"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/item_email"
            app:layout_constraintTop_toTopOf="@+id/item_email"
            app:layout_constraintVertical_bias="0.172"
            app:srcCompat="@drawable/ic_email"
            android:contentDescription="@string/email" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>